[package]
name = "scotland-yard"
version = "0.1.0"
authors = ["Michael Hewson <michael@michaelhewson.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
generic-array = "0.13.2"
regex = "1.2.0"
derive_more = "0.15.0"
joinery = "2.0.0"
rustyline = "5.0.1"
failure = "0.1.5"
lazy_static = "1.3.0"
